<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- STRINGS GLOBALES -->
    <string name="app_name" translatable="false">DriveAlert</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyADCCHJ9BNi29RVPX5eHRYvY8b1jhDlhc0</string>
    <string name="direction_url_api" translatable="false">https://maps.googleapis.com/maps/api/directions/json?</string>

    <!-- STRINGS ACTIVITY PRINCIPAL -->
    <string name="principal_titulo1">Nueva Ruta</string>
    <string name="principal_titulo2">Rutas Guardadas</string>
    <string name="principal_titulo3">Configuración</string>
    <string name="principal_titulo4">Salir</string>

    <!-- STRINGS PARA EL ACTIVITY DE SELECCIONAR ORIGEN-DESTINO -->
    <string name="select_ruta_origen">Origen: </string>
    <string name="select_ruta_destino">Destino: </string>
    <string name="select_ruta_intrOrig">¿Desde dónde salimos?</string>
    <string name="select_ruta_intrDest">¿A dónde quieres ir?</string>
    <string name="select_ruta_ir">Mostrar Ruta</string>

    <!-- STRINGS PARA EL ACTIVITY DE MOSTRAR RUTA -->
    <string name="obtInci">Obtener Incidencias</string>
    <string name="description">Descripción de la incidencia pulsada</string>

    <!-- STRINGS PARA EL ACTIVITY DE SELECCIONAR LOS PARÁMETROS -->
    <string name="param">Parámetros</string>
    <string name="param1">¿Cómo quieres hacer la ruta?</string>
    <string name="param2">Ruta en coche/motocicleta</string>
    <string name="param3">Ruta a pie</string>
    <string name="param4">Ruta en bici</string>
    <string name="param5">Ruta en transporte público</string>

    <string name="param6">¿Qué transporte público?</string>
    <string name="param7">Bus</string>
    <string name="param8">Tren</string>

    <string name="param9">Evitar Peajes</string>
    <string name="param10">Evitar Autopistas/Autovías</string>
    <string name="param11">Evitar Ferries</string>
    <string name="guardar">Guardar</string>

    <string name="InciButton">Incidencias</string>

    <string name="incidencias">Incidencias</string>
    <string name="incid1">Cámaras</string>
    <string name="incid2">Sensores de Tráfico</string>
    <string name="incid3">Radares</string>
    <string name="incid4">Retenciones</string>
    <string name="incid5">Obras</string>

    <string name="savedConf">Configuración guardada!</string>

    <!-- STRINGS PARA EL ACTIVITY DE SELECCIONAR CONFIGURACIÓN -->
    <string name="tituloConfiguracion">Configuración</string>
    <string name="idioma">Idiomas</string>
    <string name="configInc">Activar Incidencias</string>

    <!-- STRINGS PARA EL ACTIVITY DE RUTAS GUARDADAS -->
    <string name="rutasguardadas">Rutas Guardadas</string>

    <!-- STRINGS PARA EL ACTIVITY DE AYUDA -->
    <string name="ayuda">Ayuda</string>
    <string name="ayudadescripcion">
        Bienvenido a Drive Smart.

        \n\nEsta aplicación te permitirá conocer la ruta que más se ajuste a tus preferencias dependiendo de
        las opciones que desees, además te informará en el mapa de cualquier incidencia de tráfico que pudiese haber en la ruta.

        \n\nPara empezar te recomiendo que entres en Configuración y elijas el idioma, los parámetros de la ruta y las preferencias
        en cuanto a qué incidencias quieres que se te muestren. Una vez hecho eso, escoge la opción Selecciona Nueva Ruta
        y elige el Origen y Destino de la ruta que desees realizar.

        \n\nUna vez que estés viendo la Ruta, podrás navegar por el mapa y ver el trazado de ésta, si lo deseas,
        pulsando la opción de Obtener Incidencias podrás ver si a lo largo de tu ruta hay alguna incidencia de las que
        has configurado, y su descripción pinchando en ella.

        \n\nLa ruta quedará guardada en la aplicación y podrás ver de nuevo el tiempo y duración estimado
        por si alguna vez estás interesado en volver a hacerla.

        \n\nGracias por utilizarla y ¡buen viaje!
    </string>


</resources>
