<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.Parametros">

    <TextView
        android:id="@+id/tvParam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/param"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/tvRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/param1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <RadioGroup
        android:id="@+id/GrbGrupoRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203">

        <RadioButton
            android:id="@+id/RbOpcionCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/param2" />

        <RadioButton
            android:id="@+id/RbOpcionPie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/param3" />

        <RadioButton
            android:id="@+id/RbOpcionBici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/param4" />

        <RadioButton
            android:id="@+id/RbOpcionPublic"
            android:layout_width="260dp"
            android:onClick="onRadioButtonClicked"
            android:layout_height="wrap_content"
            android:text="@string/param5" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/param6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <RadioGroup
        android:id="@+id/GrbGrupoPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554">

        <RadioButton
            android:id="@+id/RbOpcionBus"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/param7" />

        <RadioButton
            android:id="@+id/RbOpcionTren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/param8" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/cBPeaje"
        android:layout_width="237dp"
        android:layout_height="32dp"
        android:checked="true"
        android:text="@string/param11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <CheckBox
        android:id="@+id/cBAutovia"
        android:layout_width="237dp"
        android:layout_height="32dp"
        android:checked="false"
        android:text="@string/param10"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <CheckBox
        android:id="@+id/cBFerry"
        android:layout_width="237dp"
        android:layout_height="32dp"
        android:checked="true"
        android:text="@string/param9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <Button
        android:id="@+id/btIncidencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InciButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />


</android.support.constraint.ConstraintLayout>
