<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.SelectRuta">

    <TextView
        android:id="@+id/tvOrig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_ruta_origen"
        android:textSize="22sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etIntrOrig"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_ruta_destino"
        android:textSize="22sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <EditText
        android:id="@+id/etIntrOrig"
        android:layout_width="275dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/select_ruta_intrOrig"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.219" />

    <EditText
        android:id="@+id/etIntrDest"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/select_ruta_intrDest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/btnParam"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:text="@string/param"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/btnIr"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:text="@string/select_ruta_ir"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.684" />

</android.support.constraint.ConstraintLayout>
